# PersianToolsCli

./: Cargo.toml  README.md
.github/workflows/: ci-cd.yaml
src/: arg_parser.rs  constants.rs
